test/fail_compilation/either.cx
module either;

macro import cx.macros.assert;
macro import cx.macros.either;

 void main() {
     Either(string, int) e = "foo";
     assert(e.case(string s: 1) == 1);
 }
